<resources>
    <string name="app_name">Paimon helper</string>
    <string name="hyperlink_github"><a href="https://github.com/AnastasiaZay/Genshin-Application-Helper">GitHub</a></string>
    <string name="title_activity_menu">Profile</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="action_settings">Preferences</string>
    <string name="home">Home</string>
    <string name="characters">Characters</string>
    <string name="favorite_characters">Your favorite characters:</string>
    <string name="follow_book_characters">Characters, whom books you follow:</string>
    <string name="my_characters">Characters you have:</string>
    <string name="follow_book">Follow book</string>
    <string name="choosen_character">Favorite character</string>
    <string name="map">Map</string>
    <string name="info">Info</string>
    <string name="weapon">Weapon</string>
    <string name="sword">Sword</string>
    <string name="claymore">Claymore</string>
    <string name="bow">Bow</string>
    <string name="catalyst">Catalyst</string>
    <string name="polearm">Polearm</string>
    <string name="i_have">I have</string>
    <string name="available_at">Available at:</string>
    <string name="book_notification_one">Today books to farm for </string>
    <string name="book_notification_title">Don\'t forget talent book!</string>
    <string name="talents_priority">Talents Priority</string>
    <string name="weekly_boss">Weekly Boss Item</string>
    <string name="artifacts">Artifacts</string>
    <string name="artifacts_1_pies_bonus">1 pies bonus:</string>
    <string name="artifacts_2_pies_bonus">2 pies bonus:</string>
    <string name="artifacts_4_pies_bonus">4 pies bonus:</string>
    <string name="max_rarity">Max artifact rarity:</string>
    <string name="artifacts_stats">Artifacts stats</string>
    <string name="bis">BiS</string>
    <string name="alternatives">Alternatives</string>
    <string name="f2p">F2P</string>
    <string name="go_back">Go back</string>
    <string name="greeting">Welcome, Traveler here is your daily adventures</string>
    <string name="about">About</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="this_app">This app is not affiliated with or endorsed by MiHoYo or Hoyoverse or Cognosphere Pte.Ltd Genshin Helper is just a database daily activities helper for Genshin Impact game</string>
    <string name="support">Support</string>
    <string name="visit_github_page">Visit Github page</string>
    <string name="i_ve">Inspired by project "Akasha Terminal"</string>
    <string name="loading">Loading</string>
    <string name="available_in_lang">Available in these languages:</string>
    <string name="en" translatable="false">🇺🇸 English</string>
    <string name="ru" translatable="false">Русский</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="nav_header_name">Paimon helper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>

</resources>