<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mainActivity"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profileFragment"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_charactersFragment"
            android:title="@string/characters" />
        <item
            android:id="@+id/nav_weaponFragment"
            android:title="@string/weapon" />
        <item
            android:id="@+id/nav_artifactsFragment"
            android:title="@string/artifacts" />

        <item
            android:id="@+id/nav_informationFragment"
            android:title="@string/info" />

    </group>
</menu>